hphp/hack/test/typecheck/attributes/entry_point_arity.php.like_types.exp
File "entry_point_arity.php", line 7, characters 1-61:
Only one __EntryPoint annotation is permitted per file (previous __EntryPoint annotation in entry_point_arity.php:3) (Parsing[1002])
